# emojivur

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: gengetopt.cmake
include/: config.h.in  emojivur.h  harfbuzz_bkport.h
src/: cli_options.ggo  emojivur.c  harfbuzz_bkport.c
